@@ -1,5 +1,15 @@
 2010-02-09  Yury Semikhatsky  <yurys@chromium.org>
 
+        Unreviewed. Follow-up fix.
+
+        Add missing devTools.css file.
+
+        https://bugs.webkit.org/show_bug.cgi?id=34756
+
+        * src/js/devTools.css: Added.
+
+2010-02-09  Yury Semikhatsky  <yurys@chromium.org>
+
         Reviewed by Pavel Feldman.
 
         Upstream DevTools Images and .css files.
